[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/objCraftingInfo.gd" type="Script" id=1]
[ext_resource path="res://Scenes/CraftingScene/CraftingTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/FactoryEntity/Structure/Processor/img_kiln.png" type="Texture" id=4]

[node name="objCraftingInfo" type="Panel" groups=[
"grpInvUI",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 108.0
margin_right = -140.0
margin_bottom = -1438.0
rect_min_size = Vector2( 920, 60 )
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
margin_bottom = 3.05176e-05
rect_min_size = Vector2( 920, 374 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctnCostInfo" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 374.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 2
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labCost" type="Label" parent="HBoxContainer/ctnCostInfo"]
margin_right = 200.0
margin_bottom = 50.0
text = "Cost:"

[node name="texEntity" type="TextureRect" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 560.0
margin_bottom = 374.0
size_flags_horizontal = 3
texture = ExtResource( 4 )
stretch_mode = 6

[node name="labInvAmount" type="Label" parent="HBoxContainer/texEntity"]
anchor_left = 0.25
anchor_top = 0.85
anchor_right = 0.25
anchor_bottom = 1.0
rect_min_size = Vector2( 32, 56 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctnCraftProgress" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 564.0
margin_right = 920.0
margin_bottom = 374.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/ctnCraftProgress"]
margin_top = 116.0
margin_right = 356.0
margin_bottom = 166.0
text = "Progress:"

[node name="prgBar" type="ProgressBar" parent="HBoxContainer/ctnCraftProgress"]
margin_top = 170.0
margin_right = 356.0
margin_bottom = 212.0

[node name="btnCraft" type="Button" parent="HBoxContainer/ctnCraftProgress"]
margin_top = 216.0
margin_right = 356.0
margin_bottom = 258.0
focus_mode = 1
theme = ExtResource( 2 )
action_mode = 0
enabled_focus_mode = 1
text = "CRAFT"

[node name="twnTabInfo" type="Tween" parent="."]
[connection signal="pressed" from="HBoxContainer/ctnCraftProgress/btnCraft" to="." method="_on_btnCraft_pressed"]
